--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
               with:
                   node-version: 16.x
                   cache: npm
+                  cache-dependency-path: website/package-lock.json
 
             - name: Switch to website directory
               run: cd website
