--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,12 +17,10 @@ jobs:
                   cache: npm
                   cache-dependency-path: website/package-lock.json
 
-            - name: Switch to website directory
-              run: cd website
             - name: Install dependencies
-              run: npm install --frozen-lockfile
+              run: cd website && npm install --frozen-lockfile
             - name: Build website
-              run: npm run build
+              run: cd website && npm run build
             - name: Push to website branch
               uses: s0/git-publish-subdir-action@develop
               env:
